force-app/main/default/objects/OpportunityDownPayment__c/OpportunityDownPayment__c.object-meta.xml
<CustomObject>
    <description>This object how down payments are structured for each opportunity</description>
    <label>Opportunity Down Payment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Opportunity Down Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>