force-app/main/default/objects/OpportunityDownPayment__c/fields/BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingAmount__c</fullName>
    <label>Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>