force-app/main/default/objects/OpportunityDownPayment__c/fields/DownPaymentType__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentType__c</fullName>
    <formula>IF(FromMonth__c == ToMonth__c, &apos;Bullet&apos;, &apos;Series&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Down Payment Type</label>
    <type>Text</type>
</CustomField>