force-app/main/default/objects/OpportunityDownPayment__c/fields/FromMonth__c.field-meta.xml
<CustomField>
    <fullName>FromMonth__c</fullName>
    <label>From Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>