force-app/main/default/objects/OpportunityDownPayment__c/fields/ToMonth__c.field-meta.xml
<CustomField>
    <fullName>ToMonth__c</fullName>
    <label>To Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>